feat: rework languages list into table by styles, remake default element marks.

--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@ function addAllFieldsAsTextNode(
 
         <section class="sections-wrapper__content-block section">
           <h2>Languages</h2>
-          <ul>
-            <li>Russian: native speaker.</li>
-            <li>English: A2-B1 level.</li>
+          <ul class="languages-list">
+            <li><span>Russian:</span><span>native speaker.</span></li>
+            <li><span>English:</span><span>A2-B1 level.</span></li>
           </ul>
         </section>
 
