fix: add required by `WCAG 2.1 H30` area label.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ function addAllFieldsAsTextNode(
         <div class="footer-txt">&copy; 2023
           <a href="https://github.com/spacehummer" class="my-github-name-link">spacehummer</a>
         </div>
-        <a href="https://rs.school/js/" class="footer-rss-logo"></a>
+        <a href="https://rs.school/js/" class="footer-rss-logo" aria-label="RS School logo with link."></a>
       </div>
     </div>
   </footer>
