fix: add missing anchors for nav-menu.

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Contacts</a>
+            <a href="#contacts" class="item__link">Contacts</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">About Me</a>
+            <a href="#about-me" class="item__link">About Me</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Skills</a>
+            <a href="#skills" class="item__link">Skills</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Code Example</a>
+            <a href="#code-example" class="item__link">Code Example</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Experience</a>
+            <a href="#experience" class="item__link">Experience</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Education</a>
+            <a href="#education" class="item__link">Education</a>
           </li>
           <li class="navigation__list__item">
-            <a href="#" class="item__link">Languages</a>
+            <a href="#languages" class="item__link">Languages</a>
           </li>
         </ul>
       </nav>
@@ -77,7 +77,7 @@
           <img src="img/avatar.jpg" alt="My photo.">
         </section>
 
-        <section class="sections-wrapper__content-block section" id="contacts">
+        <section id="contacts" class="sections-wrapper__content-block section">
           <h2>Contacts</h2>
           <ul class="contacts-list">
             <li><span>Phone Number: </span><span>+7-999-999-99-99</span></li>
@@ -86,7 +86,7 @@
           </ul>
         </section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="about-me" class="sections-wrapper__content-block section">
           <h2>About Me</h2>
           <p>I love everything related to electronics, engineering and development.
             Initially,
@@ -108,7 +108,7 @@
             technologies and are often intertwined with other technologies.
           </p></section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="skills" class="sections-wrapper__content-block section">
           <h2>Skills</h2>
           <div class="tech_logo">
             <img
@@ -169,7 +169,7 @@
           </ul>
         </section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="code-example" class="sections-wrapper__content-block section">
           <h2>Code Example</h2>
 <pre class="js code-example">
 <code>
@@ -211,7 +211,7 @@ function addAllFieldsAsTextNode(
 </pre>
         </section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="experience" class="sections-wrapper__content-block section">
           <h2>Experience</h2>
           <p>Participated in the development of networking hardware, as Test Engineer,
             Quality
@@ -220,13 +220,13 @@ function addAllFieldsAsTextNode(
             as
             a designer, technical writer and content manager.</p></section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="education" class="sections-wrapper__content-block section">
           <h2>Education</h2>
           <p>Moscow State University of Civil Engineering (MGSU), Bachelor's degree in
             Mathematical and computer modeling of mechanical systems and processes.</p>
         </section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="projects" class="sections-wrapper__content-block section">
           <h2>Projects</h2>
           <ul class="projects-list">
             <li>
@@ -239,7 +239,7 @@ function addAllFieldsAsTextNode(
 
         </section>
 
-        <section class="sections-wrapper__content-block section">
+        <section id="languages" class="sections-wrapper__content-block section">
           <h2>Languages</h2>
           <ul class="languages-list">
             <li><span>Russian:</span><span>native speaker.</span></li>
